Enhance Dot Navigation Menu with keyboard support and active state management

--- a/Mini_Web_project/Projeect15/index.html
+++ b/Mini_Web_project/Projeect15/index.html
@@ -32,4 +32,44 @@
     <p class="note">This example uses only HTML, CSS and a tiny bit of JavaScript for keyboard support.</p>
   </main>
 
-  
+  <script>
+    // Simple script to toggle active dot and panel
+    (function () {
+      const dots = Array.from(document.querySelectorAll('.dot'));
+      const panels = Array.from(document.querySelectorAll('.panel'));
+      let active = 0;
+
+      function setActive(index) {
+        dots.forEach((d, i) => {
+          const isActive = i === index;
+          d.classList.toggle('active', isActive);
+          d.setAttribute('aria-pressed', String(isActive));
+          d.tabIndex = isActive ? 0 : -1;
+        });
+        panels.forEach((p, i) => {
+          p.hidden = i !== index;
+        });
+        active = index;
+      }
+
+      dots.forEach((dot, i) => {
+        dot.addEventListener('click', () => setActive(i));
+        dot.addEventListener('keydown', (e) => {
+          if (e.key === 'ArrowRight' || e.key === 'ArrowDown') {
+            e.preventDefault();
+            setActive((active + 1) % dots.length);
+            dots[active].focus();
+          } else if (e.key === 'ArrowLeft' || e.key === 'ArrowUp') {
+            e.preventDefault();
+            setActive((active - 1 + dots.length) % dots.length);
+            dots[active].focus();
+          }
+        });
+      });
+
+      // initialize
+      setActive(0);
+    })();
+  </script>
+</body>
+</html>
