Add main content section to index.html

--- a/Mini_Web_project/Project19/index.html
+++ b/Mini_Web_project/Project19/index.html
@@ -29,4 +29,9 @@
         </div>
     </nav>
 
-    
+    <main>
+        <h1>Welcome to my website!</h1>
+        <p>This is the main content area.</p>
+    </main>
+</body>
+</html>
